# pkg-tracker

./: Cargo.toml
.idx/: dev.nix
crates/core/: Cargo.toml
crates/plugins/apt/: Cargo.toml
crates/plugins/apt/src/: main.rs
crates/plugins/brew/: Cargo.toml
crates/plugins/brew/src/: main.rs
crates/plugins/termux/: Cargo.toml
crates/plugins/termux/src/: cli.rs  main.rs  tracker.rs
tracker-protocol/: Cargo.toml
