[workspace]
members = [
    "crates/core",
    "crates/plugins/brew",
    "crates/plugins/termux",
    "crates/plugins/apt",
    "tracker-protocol"
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }